--- a/Project Code/docker-compose.yml
+++ b/Project Code/docker-compose.yml
@@ -8,10 +8,7 @@ services:
     # Environment variables to setup postgres. Note that this is not secure, and
     # in production (or your project), you should store these in a different
     # file [5] or use secrets [6]. In no case should such files be uploaded to GitHub.
-    environment:
-      POSTGRES_USER: snakker
-      POSTGRES_PASSWORD: pwd
-      POSTGRES_DB: snaktrak_db
+    env_file: .env
     expose:
       - "5432"                                  # We need only expose port `5432` internally to node (not the host)
     volumes:
@@ -24,7 +21,8 @@ services:
   web:
     image: node:12
     user: "node"                                # Use a non-root user node
-    working_dir: /home/node/app                 # with home directory /home/node/app
+    working_dir: /home/node/app
+    env_file: .env              # with home directory /home/node/app
     # environment:
     #   - NODE_ENV=production                   # << Use this when deploying your application,
     #                                           #   currently we have it off so that changes to
